src/objects/SC_Case_Questionnaire__mdt.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carrier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communication &amp; Service</fullName>
                    <default>true</default>
                    <label>Communication &amp; Service</label>
                </value>
                <value>
                    <fullName>E-commerce site</fullName>
                </value>
                <value>
                    <fullName>Orders &amp; Billing</fullName>
                </value>
                <value>
                    <fullName>Product Related</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Software Complaint</fullName>
                    <label>Software</label>
                </value>
                <value>
                    <fullName>Customer Interaction</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Orders</fullName>
                </value>
                <value>
                    <fullName>Not a Complaint</fullName>
                    <isActive>false</isActive>
                    <label>Not a Complaint</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correctionofvalue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correction of value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Rebill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit/Rebill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expirationdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_name__c</fullName>
        <label>Field name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Item number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOTnumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOT number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_or_Replacement_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New or Replacement Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_description__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Returnnumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Softwarename__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Software name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeofcontact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time of contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tracking_number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tracking number</label>
        <type>Checkbox</type>
    </fields>
    <label>SC Case questionnaire</label>
    <pluralLabel>SC Case Questionnaires</pluralLabel>
</CustomObject>